# inode_count_modifier

./: AUTHORS  Makefile.am  README.md  config.h  configure.ac  increase_inode_count.c  main.c  reduce_inode_count.c  resize2fs.h  resize2fs_common.c
tests/: ALL_TESTS.sh  test_bigalloc.tmpfs.sh  test_bigalloc_single_file.sh  test_blocksize_not_4096.tmpfs.sh  test_fs_70gb.sh  test_low_free_space.tmpfs.sh  test_many_folders.tmpfs.sh  test_meta_bg.sh  test_no_flex_bg.32bits.inode_128bits.badblocks.tiny_last_group.tmpfs.sh  test_stable_inodes.tmpfs.sh  test_tiny_last_group.sh  test_wrong_free_inode_count.sh  test_xattrs.no_ea_inode.tmpfs.sh  test_xattrs_ea_inode.sh
